# qrispy

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: demo.py
qrispy/: __init__.py  client.py  exceptions.py  response.py
