[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrispy"
version = "0.1.0"
description = "Simple QRIS Python SDK for Indonesia"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Ajang Rahmat", email = "ajangrahmat@gmail.com"}
]
keywords = ["qris", "indonesia", "payment", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "requests"
]

[project.urls]
Homepage = "https://github.com/ajangrahmat/qrispy"
Repository = "https://github.com/ajangrahmat/qrispy"
Documentation = "https://github.com/ajangrahmat/qrispy#readme"